chore: purge java.net.URLs