@@ -15,7 +15,6 @@
  */
 package de.fraunhofer.iosb.app.aas.mapper;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import de.fraunhofer.iosb.aas.lib.model.impl.Service;
 import de.fraunhofer.iosb.app.aas.mapper.environment.referable.SubmodelElementMapper;
 import de.fraunhofer.iosb.dataplane.aas.spi.AasDataAddress;
@@ -39,8 +38,8 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 import java.util.List;
@@ -166,14 +165,14 @@ class SubmodelElementMapperTest {
         Asset mappedProperty = mappedChildren.get(0);
         assertEquals(AAS_PREFIX.concat(":").concat("Property"), mappedProperty.getProperty(AAS_V30_NAMESPACE.concat("modelingType")));
         assertInstanceOf(AasDataAddress.class, mappedProperty.getDataAddress());
-        assertEquals(mockService.baseUrl().toString(), ((AasDataAddress) mappedProperty.getDataAddress()).getBaseUrl());
+        assertEquals(mockService.baseUri().toString(), ((AasDataAddress) mappedProperty.getDataAddress()).getBaseUrl());
         assertEquals(String.format(listAccessorPathTemplate, "0"), ((AasDataAddress) mappedProperty.getDataAddress()).getPath());
 
 
         Asset mappedList = mappedChildren.get(1);
         assertEquals(AAS_PREFIX.concat(":").concat("SubmodelElementList"), mappedList.getProperty(AAS_V30_NAMESPACE.concat("modelingType")));
         assertInstanceOf(AasDataAddress.class, mappedList.getDataAddress());
-        assertEquals(mockService.baseUrl().toString(), ((AasDataAddress) mappedList.getDataAddress()).getBaseUrl());
+        assertEquals(mockService.baseUri().toString(), ((AasDataAddress) mappedList.getDataAddress()).getBaseUrl());
         assertEquals(String.format(listAccessorPathTemplate, "1"), ((AasDataAddress) mappedList.getDataAddress()).getPath());
 
 
@@ -181,22 +180,22 @@ class SubmodelElementMapperTest {
         assertEquals(AAS_PREFIX.concat(":").concat("SubmodelElementCollection"),
                 mappedCollection.getProperty(AAS_V30_NAMESPACE.concat("modelingType")));
         assertInstanceOf(AasDataAddress.class, mappedCollection.getDataAddress());
-        assertEquals(mockService.baseUrl().toString(), ((AasDataAddress) mappedCollection.getDataAddress()).getBaseUrl());
+        assertEquals(mockService.baseUri().toString(), ((AasDataAddress) mappedCollection.getDataAddress()).getBaseUrl());
         assertEquals(String.format(listAccessorPathTemplate, "2"), ((AasDataAddress) mappedCollection.getDataAddress()).getPath());
 
 
         Asset mappedBlob = mappedChildren.get(3);
         assertEquals(AAS_PREFIX.concat(":").concat("Blob"), mappedBlob.getProperty(AAS_V30_NAMESPACE.concat("modelingType")));
         assertInstanceOf(AasDataAddress.class, mappedBlob.getDataAddress());
-        assertEquals(mockService.baseUrl().toString(), ((AasDataAddress) mappedBlob.getDataAddress()).getBaseUrl());
+        assertEquals(mockService.baseUri().toString(), ((AasDataAddress) mappedBlob.getDataAddress()).getBaseUrl());
         assertEquals(String.format(listAccessorPathTemplate, "3"), ((AasDataAddress) mappedBlob.getDataAddress()).getPath());
     }
 
 
     private Service mockService() {
         try {
-            return new Service.Builder().withUrl(new URL("https://test-url:1234/api/v3.0")).build();
-        } catch (MalformedURLException e) {
+            return new Service.Builder().withUri(new URI("https://test-url:1234/api/v3.0")).build();
+        } catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
     }
