@@ -19,8 +19,8 @@ import de.fraunhofer.iosb.ssl.SelfSignedCertificateRetriever;
 import org.eclipse.edc.spi.result.Result;
 
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.security.KeyManagementException;
 import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
@@ -56,16 +56,16 @@ public class DefaultSelfSignedCertificateRetriever implements SelfSignedCertific
         }
     } };
 
-    public static boolean isTrusted(String urlString) {
+    public static boolean isTrusted(String uriString) {
         HttpsURLConnection.setDefaultSSLSocketFactory((SSLSocketFactory) SSLSocketFactory.getDefault());
-        URL url;
+        URI uri;
         try {
-            url = new URL(urlString);
-        } catch (MalformedURLException malformedUrlException) {
+            uri = new URI(uriString);
+        } catch (URISyntaxException e) {
             return false;
         }
         try {
-            var conn = (HttpsURLConnection) url.openConnection();
+            var conn = (HttpsURLConnection) uri.toURL().openConnection();
             conn.connect();
             // Connection with standard java library succeeded
             // -> according to this system, the server has a trusted certificate
@@ -77,11 +77,11 @@ public class DefaultSelfSignedCertificateRetriever implements SelfSignedCertific
 
     public Result<Certificate[]> getSelfSignedCertificate(String urlString) {
         SSLContext sslContext;
-        URL url;
+        URI uri;
         try {
-            url = new URL(urlString);
-        } catch (MalformedURLException malformedUrlException) {
-            return Result.failure(List.of(malformedUrlException.getMessage()));
+            uri = new URI(urlString);
+        } catch (URISyntaxException uriSyntaxException) {
+            return Result.failure(List.of(uriSyntaxException.getMessage()));
         }
 
         try {
@@ -95,7 +95,7 @@ public class DefaultSelfSignedCertificateRetriever implements SelfSignedCertific
         HttpsURLConnection conn;
 
         try {
-            conn = (HttpsURLConnection) url.openConnection();
+            conn = (HttpsURLConnection) uri.toURL().openConnection();
             conn.connect();
         } catch (IOException e) {
             return Result.failure(List.of(e.getMessage()));
